--- a/Actividad_5_Diseño_de_algoritmos_en_Python.ipynb
+++ b/Actividad_5_Diseño_de_algoritmos_en_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRyVrGmm5vH5+nVonHOg0A",
+      "authorship_tag": "ABX9TyP9y3nF15TuBRwsaP3TQIr5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "id": "w0xOMJEJV7Ga",
         "outputId": "ab386b59-5025-4f09-9d9f-e990148b22eb"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
         "id": "iiUz7d8saJ-Z",
         "outputId": "95b3fe19-a847-4362-c29f-e3be7e26132b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
         "id": "uyXDS1y2cG-w",
         "outputId": "52dd0289-7134-4716-8da5-da05e8794d5e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -165,6 +165,82 @@
             "Ingresa el inicio del rango: 10\n",
             "Ingresa el fin del rango: 100\n",
             "Números primos en el rango de 10 a 100: [11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "# Inicializar variables\n",
+        "intentos = 0\n",
+        "numero_min = 1\n",
+        "numero_max = 100\n",
+        "\n",
+        "# Generar un número aleatorio\n",
+        "numero = random.randint(numero_min, numero_max)\n",
+        "\n",
+        "# Pedir el nombre del usuario\n",
+        "print(\"Bienvenido al juego, ¿cuál es tu nombre?\")\n",
+        "nombre_usuario = input()\n",
+        "\n",
+        "print(f\"Bueno, {nombre_usuario}, estoy pensando en un número entre {numero_min} y {numero_max}.\")\n",
+        "\n",
+        "# Ciclo principal del juego\n",
+        "while intentos < 8:\n",
+        "    print(\"¿En qué número pienso?\")\n",
+        "    adivina = int(input())  # Convertir la entrada del usuario a entero\n",
+        "\n",
+        "    intentos += 1\n",
+        "\n",
+        "    # Proporcionar pistas\n",
+        "    if adivina < numero:\n",
+        "        print(\"Tu número es menor.\")\n",
+        "    elif adivina > numero:\n",
+        "        print(\"Tu número es mayor.\")\n",
+        "    else:\n",
+        "        print(f\"¡Adivinaste, {nombre_usuario}! Lo lograste en {intentos} intentos.\")\n",
+        "        break\n",
+        "else:\n",
+        "    # Si se superan los intentos, se revela el número\n",
+        "    print(f\"Lo siento, {nombre_usuario}. El número en el que estaba pensando era {numero}.\")"
+      ],
+      "metadata": {
+        "id": "RKrRY7B0TkmQ",
+        "outputId": "14635e10-43fd-4ef3-d65c-0265bace2192",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bienvenido al juego, ¿cuál es tu nombre?\n",
+            "Patricio\n",
+            "Bueno, Patricio, estoy pensando en un número entre 1 y 100.\n",
+            "¿En qué número pienso?\n",
+            "46\n",
+            "Tu número es menor.\n",
+            "¿En qué número pienso?\n",
+            "68\n",
+            "Tu número es menor.\n",
+            "¿En qué número pienso?\n",
+            "89\n",
+            "Tu número es menor.\n",
+            "¿En qué número pienso?\n",
+            "90\n",
+            "Tu número es menor.\n",
+            "¿En qué número pienso?\n",
+            "100\n",
+            "Tu número es mayor.\n",
+            "¿En qué número pienso?\n",
+            "98\n",
+            "¡Adivinaste, Patricio! Lo lograste en 6 intentos.\n"
           ]
         }
       ]
