Se creó con Colab

--- a/Actividad_5_Diseño_de_algoritmos_en_Python.ipynb
+++ b/Actividad_5_Diseño_de_algoritmos_en_Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9y3nF15TuBRwsaP3TQIr5",
+      "authorship_tag": "ABX9TyNUjXweihaMuSv2KmSZCNGg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,37 +29,82 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"Escribe un programa a que solicite al usuario dos numeros y realice operaciones basicas como suma, resta, multiplicacion y division\"\"\"\n",
-        "a= int(input(\"Primer numero: \"))\n",
-        "b= int(input(\"Segundo numero: \"))\n",
-        "s= a + b\n",
-        "r= a - b\n",
-        "m= a * b\n",
-        "d= a / b\n",
-        "print (\"La suma es:\", s)\n",
-        "print (\"La resta es:\", r)\n",
-        "print (\"El producto es:\", m)\n",
-        "print (\"El cociente es:\", d)"
+        "\"\"\"Crea un programa que genere un numero aleatorio entre 1 y 100, y luego le pida al usuario que adivine el numero. El programa debe proporcionar pistas.\"\"\"\n",
+        "import random\n",
+        "\n",
+        "# Inicializar variables\n",
+        "intentos = 0\n",
+        "numero_min = 1\n",
+        "numero_max = 100\n",
+        "\n",
+        "# Generar un número aleatorio\n",
+        "numero = random.randint(numero_min, numero_max)\n",
+        "\n",
+        "# Pedir el nombre del usuario\n",
+        "print(\"Bienvenido al juego, ¿cuál es tu nombre?\")\n",
+        "nombre_usuario = input()\n",
+        "\n",
+        "print(f\"Bueno, {nombre_usuario}, estoy pensando en un número entre {numero_min} y {numero_max}.\")\n",
+        "\n",
+        "# Ciclo principal del juego\n",
+        "while intentos < 8:\n",
+        "    print(\"¿En qué número pienso?\")\n",
+        "    adivina = int(input())  # Convertir la entrada del usuario a entero\n",
+        "\n",
+        "    intentos += 1\n",
+        "\n",
+        "    # Proporcionar pistas\n",
+        "    if adivina < numero:\n",
+        "        print(\"Tu número es menor.\")\n",
+        "    elif adivina > numero:\n",
+        "        print(\"Tu número es mayor.\")\n",
+        "    else:\n",
+        "        print(f\"¡Adivinaste, {nombre_usuario}! Lo lograste en {intentos} intentos.\")\n",
+        "        break\n",
+        "else:\n",
+        "    # Si se superan los intentos, se revela el número\n",
+        "    print(f\"Lo siento, {nombre_usuario}. El número en el que estaba pensando era {numero}.\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "w0xOMJEJV7Ga",
-        "outputId": "ab386b59-5025-4f09-9d9f-e990148b22eb"
+        "id": "RKrRY7B0TkmQ",
+        "outputId": "eb4360bc-859c-4f21-8538-f4a6f599b654"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Primer numero: 1\n",
-            "Segundo numero: 2\n",
-            "La suma es: 3\n",
-            "La resta es: -1\n",
-            "El producto es: 2\n",
-            "El cociente es: 0.5\n"
+            "Bienvenido al juego, ¿cuál es tu nombre?\n",
+            "Patricio \n",
+            "Bueno, Patricio , estoy pensando en un número entre 1 y 100.\n",
+            "¿En qué número pienso?\n",
+            "56\n",
+            "Tu número es menor.\n",
+            "¿En qué número pienso?\n",
+            "98\n",
+            "Tu número es mayor.\n",
+            "¿En qué número pienso?\n",
+            "90\n",
+            "Tu número es mayor.\n",
+            "¿En qué número pienso?\n",
+            "85\n",
+            "Tu número es mayor.\n",
+            "¿En qué número pienso?\n",
+            "80\n",
+            "Tu número es mayor.\n",
+            "¿En qué número pienso?\n",
+            "76\n",
+            "Tu número es mayor.\n",
+            "¿En qué número pienso?\n",
+            "70\n",
+            "Tu número es mayor.\n",
+            "¿En qué número pienso?\n",
+            "68\n",
+            "¡Adivinaste, Patricio ! Lo lograste en 8 intentos.\n"
           ]
         }
       ]
@@ -172,75 +217,37 @@
     {
       "cell_type": "code",
       "source": [
-        "import random\n",
-        "\n",
-        "# Inicializar variables\n",
-        "intentos = 0\n",
-        "numero_min = 1\n",
-        "numero_max = 100\n",
-        "\n",
-        "# Generar un número aleatorio\n",
-        "numero = random.randint(numero_min, numero_max)\n",
-        "\n",
-        "# Pedir el nombre del usuario\n",
-        "print(\"Bienvenido al juego, ¿cuál es tu nombre?\")\n",
-        "nombre_usuario = input()\n",
-        "\n",
-        "print(f\"Bueno, {nombre_usuario}, estoy pensando en un número entre {numero_min} y {numero_max}.\")\n",
-        "\n",
-        "# Ciclo principal del juego\n",
-        "while intentos < 8:\n",
-        "    print(\"¿En qué número pienso?\")\n",
-        "    adivina = int(input())  # Convertir la entrada del usuario a entero\n",
-        "\n",
-        "    intentos += 1\n",
-        "\n",
-        "    # Proporcionar pistas\n",
-        "    if adivina < numero:\n",
-        "        print(\"Tu número es menor.\")\n",
-        "    elif adivina > numero:\n",
-        "        print(\"Tu número es mayor.\")\n",
-        "    else:\n",
-        "        print(f\"¡Adivinaste, {nombre_usuario}! Lo lograste en {intentos} intentos.\")\n",
-        "        break\n",
-        "else:\n",
-        "    # Si se superan los intentos, se revela el número\n",
-        "    print(f\"Lo siento, {nombre_usuario}. El número en el que estaba pensando era {numero}.\")"
+        "\"\"\"Escribe un programa a que solicite al usuario dos numeros y realice operaciones basicas como suma, resta, multiplicacion y division\"\"\"\n",
+        "a= int(input(\"Primer numero: \"))\n",
+        "b= int(input(\"Segundo numero: \"))\n",
+        "s= a + b\n",
+        "r= a - b\n",
+        "m= a * b\n",
+        "d= a / b\n",
+        "print (\"La suma es:\", s)\n",
+        "print (\"La resta es:\", r)\n",
+        "print (\"El producto es:\", m)\n",
+        "print (\"El cociente es:\", d)"
       ],
       "metadata": {
-        "id": "RKrRY7B0TkmQ",
-        "outputId": "14635e10-43fd-4ef3-d65c-0265bace2192",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w0xOMJEJV7Ga",
+        "outputId": "ab386b59-5025-4f09-9d9f-e990148b22eb"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Bienvenido al juego, ¿cuál es tu nombre?\n",
-            "Patricio\n",
-            "Bueno, Patricio, estoy pensando en un número entre 1 y 100.\n",
-            "¿En qué número pienso?\n",
-            "46\n",
-            "Tu número es menor.\n",
-            "¿En qué número pienso?\n",
-            "68\n",
-            "Tu número es menor.\n",
-            "¿En qué número pienso?\n",
-            "89\n",
-            "Tu número es menor.\n",
-            "¿En qué número pienso?\n",
-            "90\n",
-            "Tu número es menor.\n",
-            "¿En qué número pienso?\n",
-            "100\n",
-            "Tu número es mayor.\n",
-            "¿En qué número pienso?\n",
-            "98\n",
-            "¡Adivinaste, Patricio! Lo lograste en 6 intentos.\n"
+            "Primer numero: 1\n",
+            "Segundo numero: 2\n",
+            "La suma es: 3\n",
+            "La resta es: -1\n",
+            "El producto es: 2\n",
+            "El cociente es: 0.5\n"
           ]
         }
       ]
